tests/final/expect/15__diag__fuzz_seeded_malformed_volume_replay_no_crash.diag
Diagnostics:
Error: Unexpected token at start of expression at /Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/cases/15__torture__fuzz_seeded_malformed_volume_replay_no_crash.c:5 (got ']')
Error: expected ';' after expression at line 5
Error: invalid statement inside block at line 5
